# drosophila-stocks-mcp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  meta.yaml  pyproject.toml
.github/workflows/: release.yml  test.yml
src/drosophila_stocks_mcp/: __init__.py  centers.py  flybase.py  models.py  server.py
tests/: test_cache.py  test_core.py  test_live.py  test_mcp_protocol.py  test_robustness.py
tests/fixtures/: sample_stocks.tsv
